...
    },
    "chats.search": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Search"
          }
        },
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Поиск"
...
            "state": "translated",
            "value": "Запрос отправлен"
          }
        }
      }
    },
    "friends.search": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Find friend"
          }
...
